refactor: add class PlayerService and method findOrCreate()